<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpalShot</string>
    <string name="service_stopped">Serviço: parado</string>
    <string name="service_status">Serviço: %1$s</string>
    <string name="permissions_checking">Permissões: verificando…</string>
    <string name="permission_status">Permissões de mídia/notificação: %1$s\nAcesso a todos os arquivos: %2$s\nExibir sobre outros apps: %3$s</string>
    <string name="grant_permissions">Conceder permissões</string>
    <string name="start_monitoring">Iniciar monitoramento</string>
    <string name="stop_monitoring">Parar monitoramento</string>
    <string name="clean_temporary">Limpar temporários</string>
    <string name="new_screenshot">Novo print detectado</string>
    <string name="temporary_and_share">Temporário e compartilhar</string>
    <string name="preparing_share">Preparando…</string>
    <string name="keep_in_gallery">Manter na galeria</string>
    <string name="delete">Excluir</string>
</resources>
